Fix deserialization and add queries by branch
