# apps/gha-badge-generator/src/main/java/org/alfresco/badges/service/api/BadgeService.java
@@ -7,5 +7,5 @@ public interface BadgeService {
 
   Mono<String> getBadge(String message, String label, NamedColor messageColor, NamedColor labelColor, String logo);
 
-  Mono<String> getWorkflowBadge(String owner, String repository, String workflowId);
+  Mono<String> getWorkflowBadge(String owner, String repository, String workflowId, String branch);
 }
